style.css
/* ... */
  .nocomments { display: none !important; }


  body.admin-bar .large-header.large-header-has-slider .sy-box {
    margin: 0 !important;
    height: calc(100vh - var(--global-offset-height-with-admin));
  }

  .large-header.large-header-has-slider .sy-box {
    margin: 0 !important;
    height: calc(100vh - var(--global-offset-height));
  }

  .large-header.large-header-has-slider .sy-pager {
    position: absolute;
    bottom: 10px;
    z-index: 99;
    margin: 0 !important;
  }



	/* ================================
	   GRADIENT HEADLINE
	  ================================ */

	.ulg-gradient-heading
	{
		font-size: 5rem;
		font-weight: 700;
		margin-bottom: 1rem;
		text-transform: lowercase;
		letter-spacing: 0.02em;

		/* Gradient text */
		background: linear-gradient(
			90deg,
			#4D0D13 0%,
			#AF2A24 25%,
			#F25D3B 50%,
			#F89F3C 75%,
			#F7D580 100%
		);
		-webkit-background-clip: text !important;
		background-clip: text !important;
		color: transparent !important;
		text-transform: uppercase;
	}

	/* ================================
	   GRADIENT BORDER
	  ================================ */

	header,
	.ulg-heading-border
	{
		 border-bottom: 5px solid transparent;

	  /* 2. Apply your gradient as the source */
	  border-image-source: linear-gradient(
		to right,
		#4D0D13,
		#AF2A24,
		#F25D3B,
		#F89F3C,
		#F7D580,
		#F5F2EB
	  );

	  /* 3. The Magic: Slice set to 1 makes it stretch properly */
	  border-image-slice: 1;
	}

	.btn-primary {
		background-color: #92712A !important;
		border-color: #92712A !important;
	}

	.btn-primary:hover {
		background-color: white !important;
		border-color: #92712A !important;
		color: black !important;
	}

	.btn-outline-primary {
		border-color: #92712A !important;
	}

	.btn-outline-primary:hover {
		background-color: #92712A !important;
	}


	.nocomments { display: none; }

	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~ HEADER ~~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/
  #logo {
		width: 330px;
	  }

		.ulg-brand-bar {
			background: #0F172A;
		}



	.ulg-brand-logo-img {
		width: 200px;
    height: auto;
    background: white;
    padding: 5px 7px;
    border-radius: 5px;
	}

		.ulg-brand-bar a {
			text-decoration: none;
		}

		.ulg-brand-bar a:hover {
			text-decoration: underline;
		}

		.brandbar-nav a::after {
		  content: "|";
		  color: white;
		  /*margin-left: 10px; Adjusts space between text and pipe */
      padding: 0 5px;
		}

		.brandbar-nav a:last-child::after {
		  content: "";
		  color: white;

		}

		.ulg-brand-bar .dropdown {
			background: white;
			border-radius: 8px;
			padding: 0 7px;
		}

	.ulg-dropdown-logo {
		max-height: 24px;
		width: auto;
		display: inline-block;
	}

	@media (max-width: 767px) {
		.ulg-brand-logo {
			display: none;
		}
	}


		.ulg-brand-bar .dropdown-toggle::after {
			color: black !important;
		}

		#ulgDropdown {
			padding: 2px !important;
			margin-bottom: 0 !important;

		}


	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~ NAVIGATION ~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/


	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~ FOOTER ~~~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/
  .ulg-logo-slider .logo-slide {
    margin: 0 1rem;
  }


	footer .menu-footer-menu-1-container ul,
	footer .menu-footer-menu-2-container ul
	{
		flex-direction: column;

	}

	footer .menu-footer-menu-1-container ul li a,
	footer .menu-footer-menu-2-container ul li  a
	{

		color: #222;
	}

	footer a.active { color: #92712A !important; }
	footer a:hover { color: #92712A !important; }

	#block-7 img {
		width: 200px;
	}

/* Logo slider */
.ulg-logo-slider .logo-slide {
	margin: 0 1rem;
}

.logo-slide a {
	background-size: cover;
	background-position: center;
	/* background-size: 100% 100%; */
	background-repeat: no-repeat;
	min-height: 250px;
	position: relative;
	border-radius: 5px;
	display: block;
}

.mabellas-logo img {
  -webkit-filter: initial !important;
          filter: initial !important;
          background: rgba(0,0,0, 0.7) !important;
}

.logo-slide img {
	-webkit-filter: invert(100%) brightness(200%);
			filter: invert(100%) brightness(200%);
	background: rgba(255, 255, 255, 0.7);
	padding: 5px;
	border-radius: 5px;
	position: absolute;
	bottom: 0;
	min-height: 72px;
}


	/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~PAGES~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~ HOME PAGE ~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/
	/* ============================================
	   ulg DOUBLE BORDER SECTION WRAPPER
	   ============================================ */

	.ulg-home-section .ulg-home-section-text {
		position: relative;
		border: 4px solid black; /* Outer white border (thicker) */
		padding: 0;
		overflow: hidden;
		color: black;
		background: white;
	}

	.ulg-home-section .ulg-home-section-text:hover {
		border: 4px solid #92712A;
	}

	/* Inner border */
	.ulg-home-section .ulg-home-section-text::before {
		content: "";
		position: absolute;
		top: 6px;
		left: 6px;
		right: 6px;
		bottom: 6px;
		border: 1px solid black; /* Thin inner border */
		pointer-events: none;
		z-index: 2;
	}

	/* Inner border hover */
	.ulg-home-section .ulg-home-section-text:hover::before {
		border-color: #92712A; /* INNER border gold on hover */
	}

	.mr-2 { margin-right: 1rem; }
	.ml-2 { margin-left: 1rem; }
	.pr-2 { padding-right: 1rem !important; }
	.pl-2 { padding-left: 1rem !important; }

	/* Image should cover cleanly */
	.ulg-home-section-image img {
		width: 100%;
		height: 100%;
		-o-object-fit: cover;
		   object-fit: cover;
		display: block;
	}

	/* ============================================
	   BUTTON STYLING
	   ============================================ */

	.ulg-btn {
		background-color: #92712A !important;
	}

	.ulg-section-btn {
		color: #fff !important;

		padding: 0.65rem 1.75rem;
		font-weight: 600;
		letter-spacing: 0.08em;
		border-radius: 0;
		position: relative;
		text-transform: uppercase;
		background: #92712A;
		z-index: 5;
		max-width: 200px;
		margin: 0 auto 20px;
	}
/* ... */

